# ghostie

./: .gitignore  .prettierrc  404.html  README.md  hashmap.json  index.html  jest.config.js  package-lock.json  package.json  publish.ps1  tailwind.config.js  test-r2.ps1  test_plugin.ts  tsconfig.json  vite.config.ts  workflow-analysis.html  workflow.html  workflow_develop.html
.cursor/rules/: custom.mdc
.github/workflows/: deploy-docs.yml  release.yml  sync-to-r2.yml
RELEASE_NOTES/: v0.1.11.md  v0.1.12.md  v0.1.15.md  v0.1.16.md  v0.1.17.md  v0.1.18.md  v0.1.19.md  v0.1.20.md  v0.1.22.md  v0.1.23.md  v0.1.24.md  v0.1.25.md  v0.1.27.md  v0.1.28.md  v0.1.29.md  v0.1.31.md  v0.1.32.md  v0.1.33.md  v0.1.34.md  v0.1.35.md  v0.1.36.md  v0.1.38.md  v0.1.39.md  v0.1.41.md  v0.1.42.md  v0.1.43.md  v0.1.44.md  v0.1.45.md  v0.1.46.md  v0.1.47.md  v0.1.48.md  v0.1.49.md  v0.1.50.md  v0.1.51.md  v0.1.53.md  v0.1.56.md  v0.1.58.md  v0.1.59.md  v0.1.60.md  v0.1.61.md  (+11 more)
assets/: app.DY3mjnN5.js  index.md.CUiT4ljR.js  style.C-ivlQO6.css  workflow-analysis.md.DD4vBQVF.js  workflow-analysis.md.DD4vBQVF.lean.js  workflow.md.iTQURGim.js  workflow.md.iTQURGim.lean.js  workflow_develop.md.DxmnQFgb.js  workflow_develop.md.DxmnQFgb.lean.js
assets/chunks/: framework.CTpjEI9A.js  theme.C18_d-qb.js
docs/: index.md  package-lock.json  package.json  tsconfig.json  workflow-analysis.md  workflow.md  workflow_develop.md
docs/.vitepress/: config.ts
docs/resources/: bots.md  plugins.md  workflows.md
docs/tutorials/: bot.md  knowledge.md  p2.ts  plugin.md  plugin_examples.ts  start.md  webcrawler.ts  workflow.md  workflow_develop.md
examples/: any.ts  dev_agent.rs  dev_agent.yml  repo.ts  test_runner.rs  textPlugin.ts  text_tools.ts
examples/hello_plugin/: Cargo.toml
examples/plugin_demo/: Cargo.toml
src/: App.css  App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  aliyun_api_key.txt  knowledge_db.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  deno.rs  lib.rs  main.rs
src-tauri/src/agents/: command.rs  executor.rs  factory.rs  mod.rs  runtime.rs  tools.rs  types.rs
src-tauri/src/bots/: bot.rs  command.rs  mod.rs
src-tauri/src/commands/: agents.rs  bots.rs  chat.rs  history.rs  mod.rs  models.rs  plugins.rs  window.rs
src-tauri/src/config/: mod.rs  utils.rs  window.rs
src-tauri/src/llm/: bots.rs  chat.rs  config.rs  history.rs  llm_provider.rs  main copy.rs  mod.rs  utils.rs
src-tauri/src/llm/agents/: mod.rs  types.rs
src-tauri/src/model/: command.rs  manager.rs  mod.rs
src-tauri/src/plugins/: chat.rs  command.rs  deno.rs  js_manager.rs  knowledge.rs  loader.rs  manager.rs  mod.rs  plugin_fs.rs  types.rs
src-tauri/src/plugins/deno/: env.rs  error.rs  mod.rs  plugin.rs  runtime.rs
src-tauri/src/plugins/market/: client.rs  manager.rs  mod.rs  types.rs
src-tauri/src/plugins/mcp/: mcp.rs  mod.rs
src-tauri/src/plugins/node/: env.rs  error.rs  mod.rs  plugin.rs  runtime.rs
src-tauri/src/utils/: document.rs  file.rs  gen.rs  mod.rs  npm.rs  update.rs  utils.rs  window.rs
src-tauri/tests/: mod.rs
src-tauri/tests/workspace/: dev_agent.yml  test.txt
src-tauri/~/.tauri/: myapp.key  myapp.key.pub
src/@styles/: globals.css
src/agent/: Agent.ts
src/assets/: const.ts  globals.css  globals.scss  variables.css  variables.css.map  variables.scss
src/bot/: Bot.ts  BotEditor.tsx  BotManger.ts  BotsList.tsx  BotsMarket.tsx  BotsTab.tsx  Context.ts
src/cloud/: AgentCloudMananger.ts  MCPCloudManager.ts  ToolkitCloudManager.ts
template/: agentConfig.toml  agentConfig.yml
(+482 files in other folders)
