[package]
name = "pipshe"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.8", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0-beta.11", features = [ "protocol-asset", "tray-icon"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-global-shortcut = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
rfd = "0.12"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
chardetng = "0.1"
tauri-plugin-dialog = "2.0.0-beta.2"
toml_edit = "0.21.0"
toml = "0.8.10"
tokio = { version = "1.36.0", features = ["full"] }
walkdir = "2.4.0"
base64 = "0.21.7"
futures = "0.3"
anyhow = "1.0"
async-trait = "0.1"
colored = "2.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
