[package]
name = "ghostie"
version = "0.1.0"
description = "ghostie"
authors = ["wangenius <wangenius@qq.com>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ghostie"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
once_cell = "1.19"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
tauri = { version = "2.0.0", features = [
	"protocol-asset",
	"tray-icon",
	"devtools",
] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-global-shortcut = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
rfd = "0.12"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
chardetng = "0.1"
tauri-plugin-dialog = "2.0.0-beta.2"
toml_edit = "0.21.0"
toml = "0.7"
tokio = { version = "1.36.0", features = ["full"] }
walkdir = "2.4.0"
base64 = "0.21.7"
futures = "0.3"
anyhow = "1.0"
async-trait = "0.1"
colored = "2.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
url = { version = "2.5.4", features = ["serde"] }
tauri-plugin-updater = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-process = "2.2.0"
sha2 = "0.10"
futures-util = "0.3"
semver = "1.0"
rand = "0.8"
urlencoding = "2.1.3"
lazy_static = "1.4.0"
open = "5.0.1"
thiserror = "1.0"
zip = "0.6"
quick-xml = "0.31"
pdf-extract = "0.8.2"
tokio-util = { version = "0.7", features = ["codec"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
clipboard-win = "5.0.0"
rmcp = { version = "0.1", features = ["client",    "transport-sse",
    "transport-child-process",
    "tower"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }



[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
